Стили. Много стилей

--- a/hotels.html
+++ b/hotels.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="ru">
- 	<head>
-    	<meta charset="utf-8">
-    	<title>Седона</title>
-    	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    	<!-- <link rel="stylesheet" href="css/style.css"> -->
-  	</head>
-  	<body>
-  		<div class="container">
+	<head>
+		<meta charset="utf-8">
+		<title>Седона</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<div class="container">
 
-	  		<header class="main-header">
-	  			<nav class="main-navigation">
-	  				<a class="main-header-logo" href="index.html">
-	  					<img src="img/logo-sedona.png" width="138" height="70" alt="Логотип Sedona">
-	  				</a>
-	  				<ul class="site-navigation">
-	  					<li><a href="#">Информация</a></li>
-	  					<li><a href="#">Фото и видео</a></li>
-	  					<li><a href="#">Карта штата</a></li>
-	  					<li><a class="current-page">Гостиницы</a></li>
-	  				</ul>
-	  			</nav>
-	  		</header>
+			<header class="main-header">
+				<nav class="main-navigation">
+					<a class="main-header-logo" href="index.html">
+						<img src="img/logo-sedona.png" width="138" height="70" alt="Логотип Sedona">
+					</a>
+					<ul class="site-navigation">
+						<li>
+							<a href="#">Информация</a>
+						</li>
+						<li>
+							<a href="#">Фото и видео</a>
+						</li>
+						<li>
+							<a href="#">Карта штата</a>
+						</li>
+						<li>
+							<a class="active-page">Гостиницы</a>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
-	  		<main class="content-container">
-	  			<h1 class="visually-hidden">Каталог гостиниц Седоны</h1>
-	  			<section class="hotels-filter-setting">
-	  				<h2 class="visually-hidden">Фильтр каталога</h2>
+			<main class="content-container">
+				<h1 class="visually-hidden">Каталог гостиниц Седоны</h1>
 
-	  				<form class="hotels-filter-form" action="https://echo.htmlacademy.ru" method="get">
+				<section class="hotels-filter-setting">
+					<h2 class="visually-hidden">Фильтр каталога</h2>
+					<form class="hotels-filter-form" action="https://echo.htmlacademy.ru" method="get">
 						<fieldset>
 							<legend>Инфраструктура:</legend>
 							<ul>
@@ -65,95 +74,150 @@
 						</fieldset>
 						<fieldset>
 							<legend>Стоимость в сутки (Р.):</legend>
-							<p>
+							<p class="filter-price-container">
 								<label for="min-price">От</label>
-								<input class="filter-input-price" type="number" name="min-price" id="min-price" value="0">
+								<input class="filter-input-price" type="text" name="min-price" id="min-price" value="0">
 								<label for="max-price">До</label>
-								<input class="filter-input-price" type="number" name="max-price" id="max-price" value="3000">
+								<input type="text" name="max-price" id="max-price" value="3000">
 							</p>
 
 							<!-- Тут будет двойной ползунок-->
 
 						</fieldset>
+						<button class="filter-button" type="submit">Показать</button>
+					</form>
+				</section>
 
+				<section class="hotels-filter-results">
+					<h2 class="visually-hidden">Результаты фильтрации</h2>
+					<div class="filter-result-info">
+						<p class="filter-result-count">
+							Найдено:
+							<span>3</span>
+						</p>
+						<p class="filter-result-sorting">Сортировка:</p>
+						<ul class="sorting-type-list">
+							<li>
+								<a class="active-sorting-type" href="#">По цене</a>
+							</li>
+							<li>
+								<a href="#">По типу</a>
+							</li>
+							<li>
+								<a href="#">По рейтингу</a>
+							</li>
+						</ul>
+						<ul class="sorting-direction-list">
+							<li>
+								<a href="#">
+									<span class="visually-hidden">По возрастанию</span>
+								</a>
+							</li>
+							<li>
+								<a class="active-sorting-direction" href="#">
+									<span class="visually-hidden">По убыванию</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<ul class="filter-result-list">
+						<li>
+							<img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
+							<h3>
+								<a class="filter-item-title" href="#">Amara Resort &amp; SPA</a>
+							</h3>
+							<div class="description-button-container">
+								<p class="hotel-type">Гостиница</p>
+								<a class="more-info-button" href="#">Подробнее</a>
+							</div>
+							<div class="description-button-container">
+								<p class="hotel-price">От <span>4000</span> р.</p>
+								<a class="reservation-button" href="#">Забронировать</a>
+							</div>
+							<p class="hotel-stars">
+								<span>4 Звезды</span>
+							</p>
+							<p class="hotel-rating">Рейтинг: 
+								<span>8,5</span>
+							</p>
+						</li>
+						<li>
+							<img src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
+							<h3>
+								<a class="filter-item-title" href="#">Desert Quail Inn</a>
+							</h3>
+							<div class="description-button-container">
+								<p class="hotel-type">Мотель</p>
+								<a class="more-info-button" href="#">Подробнее</a>
+							</div>
+							<div class="description-button-container">
+								<p class="hotel-price">От <span>3000</span> р.</p>
+								<a class="reservation-button" href="#">Забронировать</a>
+							</div>
+							<p class="hotel-stars">
+								<span>3 Звезды</span>
+							</p>
+							<p class="hotel-rating">Рейтинг: 
+								<span>8,9</span>
+							</p>
+						</li>
+						<li>
+							<img src="img/hotel-3.jpg" width="135" height="90" alt="Villas At Poco Diablo">
+							<h3>
+								<a class="filter-item-title" href="#">Villas At Poco Diablo</a>
+							</h3>
+							<div class="description-button-container">
+								<p class="hotel-type">Апартаменты</p>
+								<a class="more-info-button" href="#">Подробнее</a>
+							</div>
+							<div class="description-button-container">
+								<p class="hotel-price">От <span>2000</span> р.</p>
+								<a class="reservation-button" href="#">Забронировать</a>
+							</div>
+							<p class="hotel-stars">
+								<span>2 Звезды</span>
+							</p>
+							<p class="hotel-rating">Рейтинг: 
+								<span>9,2</span>
+							</p>
+						</li>
+					</ul>
+				</section>
 
-						<button class="button filter-button" type="submit">Показать</button>
-        			</form>
+			</main>
 
-	  			</section>
+			<footer class="main-footer">
+				<p class="footer-hashtag">
+					<a href="">#visitsedona</a>
+				</p>
+				<div class="footer-social">
+					<ul>
+						<li>
+							<a class="social-button" href="#">
+								<span class="visually-hidden">Twitter</span>
+							</a>
+						</li>
+						<li>
+							<a class="social-button" href="#">
+								<span class="visually-hidden">Facebook</span>
+							</a>
+						</li>
+						<li>
+							<a class="social-button" href="#">
+								<span class="visually-hidden">YouTube</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<p class="footer-copyright">
+					website by
+					<a href="https://htmlacademy.ru/intensive/htmlcss">
+						<span class="visually-hidden">HTML Academy</span>
+					</a>
+				</p>
+			</footer>
 
-	  			<section class="hotels-filter-results">
-	  				<h2 class="visually-hidden">Результаты фильтрации</h2>
-	  				<div class="filter-result-info">
-	  					<p>Найдено: 3</p>
-	  					<p>Сортировка:</p>
-						<a class="sorting-type current-sorting-type" href="#">По цене</a>
-  						<a class="sorting-type" href="#">По типу</a>
-  						<a class="sorting-type" href="#">По рейтингу</a>
-  						<a class="sorting-direction" href="#"><span class="visually-hidden">По возрастанию</span></a>
-  						<a class="sortign-direction current-sorting-direction" href="#"><span class="visually-hidden">По убыванию</span></a>
-	  				</div>
-	  				<ul class="filter-result-list">
-	  					<li>
-	  						<p class="hotel-image">
-	  							<img src="img/hotel-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
-	  						</p>
-	  						<h3>
-	  							<a href="#">Amara Resort &amp; SPA</a>
-	  						</h3>
-	  						<p class="hotel-type">Гостиница</p>
-	  						<p class="hotel-price">От 4000 р.</p>
-	  						<a class="button more-info-button" href="#">Подробнее</a>
-	  						<a class="button reservation-button" href="#">Забронировать</a>
-	  						<p class="hotel-rating">Рейтинг: 8,5</p>
-	  					</li>
-	  					<li>
-	  						<p class="hotel-image">
-	  							<img src="img/hotel-2.jpg" width="135" height="90" alt="Desert Quail Inn">
-	  						</p>
-	  						<h3>
-	  							<a href="#">Desert Quail Inn</a>
-	  						</h3>
-							<p class="hotel-type">Мотель</p>
-	  						<p class="hotel-price">От 3000 р.</p>
-	  						<a class="button more-info-button" href="#">Подробнее</a>
-	  						<a class="button reservation-button" href="#">Забронировать</a>
-	  						<p class="hotel-rating">Рейтинг: 8,9</p>
-	  					</li>
-	  					<li>
-	  						<p class="hotel-image">
-	  							<img src="img/hotel-3.jpg" width="135" height="90" alt="Villas At Poco Diablo">
-	  						</p>
-	  						<h3>
-	  							<a href="#">Villas At Poco Diablo</a>
-	  						</h3>
-	  						<p class="hotel-type">Апартаменты</p>
-	  						<p class="hotel-price">От 2000 р.</p>
-	  						<a class="button more-info-button" href="#">Подробнее</a>
-	  						<a class="button reservation-button" href="#">Забронировать</a>
-	  						<p class="hotel-rating">Рейтинг: 9,2</p>
-	  					</li>
-	  				</ul>
-	  			</section>
-	  		</main>
-
-	  		<footer class="main-footer">
-	  			<p class="footer-hashtag">
-	  				<b>#visitsedona</b>
-	  			</p>
-	  			<div class="footer-social">
-	  				<ul>
-	  					<li><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
-	  					<li><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
-	  					<li><a class="social-button" href="#"><span class="visually-hidden">YouTube</span></a></li>
-	  				</ul>
-	  			</div>
-	  			<p class="footer-copyright">
-	  				website by <a href="https://htmlacademy.ru/intensive/htmlcss"><span class="visually-hidden">HTML Academy</span></a>
-	  			</p>
-	  		</footer>
-
-	  	</div>
-	  	<!--<script src="js/script.js"></script>-->
-  	</body>
+		</div>
+		<!--<script src="js/script.js"></script>-->
+	</body>
 </html>
