--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</nav>
 			</header>
 
-			<main class="content-container">
+			<main>
 				<h1 class="visually-hidden">Седона</h1>
 
 				<section class="welcome">
@@ -133,25 +133,23 @@
 				<p class="footer-hashtag">
 					<a href="">#visitsedona</a>
 				</p>
-				<div class="footer-social">
-					<ul>
-						<li>
-							<a class="social-button" href="#">
-								<span class="visually-hidden">Twitter</span>
-							</a>
-						</li>
-						<li>
-							<a class="social-button" href="#">
-								<span class="visually-hidden">Facebook</span>
-							</a>
-						</li>
-						<li>
-							<a class="social-button" href="#">
-								<span class="visually-hidden">YouTube</span>
-							</a>
-						</li>
-					</ul>
-				</div>
+				<ul class="footer-social">
+					<li class="footer-social-item">
+						<a class="social-button" href="#">
+							<span class="visually-hidden">Twitter</span>
+						</a>
+					</li>
+					<li class="footer-social-item">
+						<a class="social-button" href="#">
+							<span class="visually-hidden">Facebook</span>
+						</a>
+					</li>
+					<li class="footer-social-item">
+						<a class="social-button" href="#">
+							<span class="visually-hidden">YouTube</span>
+						</a>
+					</li>
+				</ul>
 				<p class="footer-copyright">
 					website by
 					<a href="https://htmlacademy.ru/intensive/htmlcss">
