--- a/index.html
+++ b/index.html
@@ -46,14 +46,18 @@
 					<p class="section-description-body">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 					<ul class="features-list">
 						<li class="feature-item-with-image">
-							<h3>Настоящий городок</h3>
-							<p>— №1 —</p>
-							<p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
+							<div class="for-pseudo-feature">
+								<h3>Настоящий городок</h3>
+								<p>— №1 —</p>
+								<p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
+							</div>
 						</li>
 						<li class="feature-item-with-image">
-							<h3>Там есть мост дьявола</h3>
-							<p>— №2 —</p>
-							<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+							<div class="for-pseudo-feature">
+								<h3>Там есть мост дьявола</h3>
+								<p>— №2 —</p>
+								<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+							</div>
 						</li>
 						<li class="feature-item">
 							<h3>Небольшая площадь</h3>
