--- a/hotels.html
+++ b/hotels.html
@@ -238,7 +238,7 @@
 				</ul>
 				<p class="footer-copyright">
 					website by
-					<a href="https://htmlacademy.ru/intensive/htmlcss">
+					<a class="copyright-button" href="https://htmlacademy.ru/intensive/htmlcss">
 						<span class="visually-hidden">HTML Academy</span>
 					</a>
 				</p>
