стилизация index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</li>
 						<li class="feature-item-with-image">
 							<div class="for-pseudo-feature">
-								<h3>Там есть мост дьявола</h3>
+								<h3>Там есть<br>мост дьявола</h3>
 								<p>— №2 —</p>
 								<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 							</div>
@@ -96,9 +96,9 @@
 				<section class="offers">
 					<h2 class="visually-hidden">Предложения</h2>
 					<p class="section-description-big-header">Заинтересовались?</p>
-					<p class="section-description-body">Укажите предполагаемые даты поездки,<br>
+					<p class="section-description-big-body">Укажите предполагаемые даты поездки,<br>
 						и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-					<a class="hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
+					<a class="hotel-search-button" href="#"><span>Поиск гостиницы в Седоне</span></a>
 					<div class="modal modal-hotel-search">
 						<form class="hotel-search-form" action="https://echo.htmlacademy.ru" method="get">
 							<p class="hotel-search-form-item">
